--- a/index.html
+++ b/index.html
@@ -50,22 +50,51 @@
 <td class="col-md-3">1.82</td>
   
 
-<td class="col-md-4">1.93</td>
+<td class="col-md-4">1.94</td>
   
 
-<td class="col-md-5">1.55</td>
+<td class="col-md-5">1.56</td>
   
 
-<td class="col-md-6">1.17</td>
+<td class="col-md-6">1.15</td>
   
 
-<td class="col-md-7">1.26</td>
+<td class="col-md-7">1.35</td>
   
 
-<td class="col-md-8">0.00</td>
+<td class="col-md-8">6.67</td>
   
 
-<td class="col-md-9">1.25</td>
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">1.62</td>
+  
+
+<td class="col-md-4">3.68</td>
+  
+
+<td class="col-md-5">1.40</td>
+  
+
+<td class="col-md-6">0.61</td>
+  
+
+<td class="col-md-7">0.65</td>
+  
+
+<td class="col-md-8">0.73</td>
+  
+
+<td class="col-md-9">1.67</td>
   
 s
 </tr>
