--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <td class="col-md-4">1.94</td>
   
 
-<td class="col-md-5">1.58</td>
+<td class="col-md-5">1.60</td>
   
 
 <td class="col-md-6">1.13</td>
@@ -62,10 +62,10 @@
 <td class="col-md-7">1.10</td>
   
 
-<td class="col-md-8">2.43</td>
+<td class="col-md-8">2.29</td>
   
 
-<td class="col-md-9">0.40</td>
+<td class="col-md-9">0.25</td>
   
 s
 </tr>
@@ -74,6 +74,35 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
+    <td class="col-md-2">NBEV</td>
+    
+<td class="col-md-3">1.26</td>
+  
+
+<td class="col-md-4">6.32</td>
+  
+
+<td class="col-md-5">1.23</td>
+  
+
+<td class="col-md-6">1.16</td>
+  
+
+<td class="col-md-7">0.81</td>
+  
+
+<td class="col-md-8">1.50</td>
+  
+
+<td class="col-md-9">0.25</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
     <td class="col-md-2">TSLA</td>
     
 <td class="col-md-3">1.62</td>
@@ -85,16 +114,16 @@ s
 <td class="col-md-5">1.38</td>
   
 
-<td class="col-md-6">0.61</td>
+<td class="col-md-6">0.59</td>
   
 
-<td class="col-md-7">0.66</td>
+<td class="col-md-7">0.67</td>
   
 
 <td class="col-md-8">0.81</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">1.25</td>
   
 s
 </tr>
