--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">AMZN</td>
+    <td class="col-md-2">AAPL</td>
     
-<td class="col-md-3">1.78</td>
+<td class="col-md-3">1.29</td>
   
 
-<td class="col-md-4">1.90</td>
+<td class="col-md-4">2.74</td>
   
 
-<td class="col-md-5">1.22</td>
+<td class="col-md-5">1.09</td>
   
 
-<td class="col-md-6">1.17</td>
+<td class="col-md-6">1.53</td>
   
 
-<td class="col-md-7">1.43</td>
+<td class="col-md-7">3.14</td>
   
 
-<td class="col-md-8">0.88</td>
+<td class="col-md-8">1.33</td>
   
 
-<td class="col-md-9">0.33</td>
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
@@ -82,13 +82,13 @@ s
 <td class="col-md-4">3.63</td>
   
 
-<td class="col-md-5">1.26</td>
+<td class="col-md-5">1.27</td>
   
 
 <td class="col-md-6">0.51</td>
   
 
-<td class="col-md-7">0.77</td>
+<td class="col-md-7">0.78</td>
   
 
 <td class="col-md-8">0.73</td>
