--- a/index.html
+++ b/index.html
@@ -56,16 +56,45 @@
 <td class="col-md-5">1.16</td>
   
 
-<td class="col-md-6">1.68</td>
+<td class="col-md-6">1.55</td>
   
 
-<td class="col-md-7">2.56</td>
+<td class="col-md-7">2.88</td>
   
 
-<td class="col-md-8">1.67</td>
+<td class="col-md-8">2.00</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">1.60</td>
+  
+
+<td class="col-md-4">3.62</td>
+  
+
+<td class="col-md-5">1.24</td>
+  
+
+<td class="col-md-6">0.53</td>
+  
+
+<td class="col-md-7">0.82</td>
+  
+
+<td class="col-md-8">0.88</td>
+  
+
+<td class="col-md-9">2.75</td>
   
 s
 </tr>
