--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 <td class="col-md-7">3.75</td>
   
 
-<td class="col-md-8">4.00</td>
+<td class="col-md-8">2.75</td>
   
 
-<td class="col-md-9">0.17</td>
+<td class="col-md-9">0.25</td>
   
 s
 </tr>
@@ -94,7 +94,7 @@ s
 <td class="col-md-8">2.20</td>
   
 
-<td class="col-md-9">0.14</td>
+<td class="col-md-9">0.20</td>
   
 s
 </tr>
@@ -111,16 +111,45 @@ s
 <td class="col-md-4">3.57</td>
   
 
-<td class="col-md-5">1.17</td>
+<td class="col-md-5">1.15</td>
   
 
-<td class="col-md-6">0.52</td>
+<td class="col-md-6">0.54</td>
   
 
-<td class="col-md-7">1.02</td>
+<td class="col-md-7">1.06</td>
   
 
-<td class="col-md-8">0.88</td>
+<td class="col-md-8">0.94</td>
+  
+
+<td class="col-md-9">0.75</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">4</td>
+    <td class="col-md-2">TWTR</td>
+    
+<td class="col-md-3">0.95</td>
+  
+
+<td class="col-md-4">13.33</td>
+  
+
+<td class="col-md-5">1.25</td>
+  
+
+<td class="col-md-6">1.32</td>
+  
+
+<td class="col-md-7">1.25</td>
+  
+
+<td class="col-md-8">0.44</td>
   
 
 <td class="col-md-9">0.33</td>
