--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">TLRY</td>
+    <td class="col-md-2">NBEV</td>
     
-<td class="col-md-3">0.90</td>
+<td class="col-md-3">1.25</td>
   
 
-<td class="col-md-4">5.52</td>
+<td class="col-md-4">5.35</td>
   
 
-<td class="col-md-5">1.75</td>
+<td class="col-md-5">1.61</td>
   
 
-<td class="col-md-6">2.73</td>
+<td class="col-md-6">0.81</td>
   
 
-<td class="col-md-7">2.42</td>
+<td class="col-md-7">1.00</td>
   
 
-<td class="col-md-8">1.88</td>
+<td class="col-md-8">2.33</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">0.67</td>
   
 s
 </tr>
