--- a/index.html
+++ b/index.html
@@ -45,24 +45,24 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">NBEV</td>
+    <td class="col-md-2">SNAP</td>
     
-<td class="col-md-3">1.25</td>
+<td class="col-md-3">1.53</td>
   
 
-<td class="col-md-4">5.35</td>
+<td class="col-md-4">2.78</td>
   
 
-<td class="col-md-5">1.61</td>
+<td class="col-md-5">1.24</td>
   
 
-<td class="col-md-6">0.81</td>
+<td class="col-md-6">0.78</td>
   
 
-<td class="col-md-7">1.00</td>
+<td class="col-md-7">1.57</td>
   
 
-<td class="col-md-8">2.33</td>
+<td class="col-md-8">1.50</td>
   
 
 <td class="col-md-9">0.67</td>
