--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">CGC</td>
+    <td class="col-md-2">TLRY</td>
     
-<td class="col-md-3">0.77</td>
+<td class="col-md-3">0.91</td>
   
 
-<td class="col-md-4">3.27</td>
+<td class="col-md-4">5.41</td>
   
 
-<td class="col-md-5">1.55</td>
+<td class="col-md-5">2.29</td>
   
 
-<td class="col-md-6">10.33</td>
+<td class="col-md-6">2.76</td>
   
 
-<td class="col-md-7">5.20</td>
+<td class="col-md-7">1.94</td>
   
 
-<td class="col-md-8">1.00</td>
+<td class="col-md-8">0.80</td>
   
 
-<td class="col-md-9">0.33</td>
+<td class="col-md-9">0.67</td>
   
 s
 </tr>
