--- a/index.html
+++ b/index.html
@@ -50,22 +50,51 @@
 <td class="col-md-3">1.30</td>
   
 
-<td class="col-md-4">2.79</td>
+<td class="col-md-4">2.77</td>
   
 
-<td class="col-md-5">1.41</td>
+<td class="col-md-5">1.38</td>
   
 
-<td class="col-md-6">2.26</td>
+<td class="col-md-6">2.44</td>
   
 
-<td class="col-md-7">1.39</td>
+<td class="col-md-7">1.44</td>
   
 
-<td class="col-md-8">2.40</td>
+<td class="col-md-8">2.60</td>
   
 
-<td class="col-md-9">0.17</td>
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">1.76</td>
+  
+
+<td class="col-md-4">2.03</td>
+  
+
+<td class="col-md-5">1.28</td>
+  
+
+<td class="col-md-6">1.06</td>
+  
+
+<td class="col-md-7">0.50</td>
+  
+
+<td class="col-md-8">1.60</td>
+  
+
+<td class="col-md-9">1.33</td>
   
 s
 </tr>
