--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
 <td class="col-md-3">1.30</td>
   
 
-<td class="col-md-4">2.78</td>
+<td class="col-md-4">2.75</td>
   
 
-<td class="col-md-5">1.30</td>
+<td class="col-md-5">1.33</td>
   
 
 <td class="col-md-6">2.81</td>
   
 
-<td class="col-md-7">1.37</td>
+<td class="col-md-7">1.14</td>
   
 
 <td class="col-md-8">2.80</td>
   
 
-<td class="col-md-9">0.50</td>
+<td class="col-md-9">0.67</td>
   
 s
 </tr>
@@ -79,22 +79,51 @@ s
 <td class="col-md-3">1.76</td>
   
 
-<td class="col-md-4">2.00</td>
+<td class="col-md-4">2.01</td>
   
 
-<td class="col-md-5">1.23</td>
+<td class="col-md-5">1.25</td>
   
 
-<td class="col-md-6">1.02</td>
+<td class="col-md-6">1.06</td>
   
 
-<td class="col-md-7">0.53</td>
+<td class="col-md-7">0.54</td>
   
 
-<td class="col-md-8">1.60</td>
+<td class="col-md-8">2.00</td>
   
 
-<td class="col-md-9">0.40</td>
+<td class="col-md-9">1.33</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">CRON</td>
+    
+<td class="col-md-3">1.04</td>
+  
+
+<td class="col-md-4">4.75</td>
+  
+
+<td class="col-md-5">2.33</td>
+  
+
+<td class="col-md-6">0.00</td>
+  
+
+<td class="col-md-7">2.33</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
