--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
               
 <tr>
     <td class="col-md-1">1</td>
-    <td class="col-md-2">AMZN</td>
+    <td class="col-md-2">QQQ</td>
     
-<td class="col-md-3">1.75</td>
+<td class="col-md-3">1.90</td>
   
 
-<td class="col-md-4">2.02</td>
+<td class="col-md-4">7.70</td>
   
 
-<td class="col-md-5">1.24</td>
+<td class="col-md-5">1.01</td>
   
 
-<td class="col-md-6">0.94</td>
+<td class="col-md-6">1.30</td>
   
 
-<td class="col-md-7">0.65</td>
+<td class="col-md-7">1.50</td>
   
 
-<td class="col-md-8">1.83</td>
+<td class="col-md-8">1.40</td>
   
 
-<td class="col-md-9">0.67</td>
+<td class="col-md-9">0.40</td>
   
 s
 </tr>
