--- a/index.html
+++ b/index.html
@@ -50,22 +50,51 @@
 <td class="col-md-3">1.91</td>
   
 
-<td class="col-md-4">7.72</td>
+<td class="col-md-4">7.74</td>
   
 
-<td class="col-md-5">1.02</td>
+<td class="col-md-5">1.04</td>
   
 
-<td class="col-md-6">1.38</td>
+<td class="col-md-6">1.37</td>
   
 
-<td class="col-md-7">1.48</td>
+<td class="col-md-7">1.62</td>
   
 
-<td class="col-md-8">1.40</td>
+<td class="col-md-8">1.50</td>
   
 
-<td class="col-md-9">0.50</td>
+<td class="col-md-9">1.33</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">TLRY</td>
+    
+<td class="col-md-3">0.93</td>
+  
+
+<td class="col-md-4">5.59</td>
+  
+
+<td class="col-md-5">2.96</td>
+  
+
+<td class="col-md-6">2.23</td>
+  
+
+<td class="col-md-7">1.45</td>
+  
+
+<td class="col-md-8">0.78</td>
+  
+
+<td class="col-md-9">0.67</td>
   
 s
 </tr>
