--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
 <td class="col-md-3">1.92</td>
   
 
-<td class="col-md-4">7.69</td>
+<td class="col-md-4">7.77</td>
   
 
 <td class="col-md-5">1.07</td>
   
 
-<td class="col-md-6">1.43</td>
+<td class="col-md-6">1.38</td>
   
 
-<td class="col-md-7">1.75</td>
+<td class="col-md-7">1.71</td>
   
 
-<td class="col-md-8">1.45</td>
+<td class="col-md-8">1.60</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">0.14</td>
   
 s
 </tr>
@@ -74,24 +74,53 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
+    <td class="col-md-2">TLRY</td>
+    
+<td class="col-md-3">0.93</td>
+  
+
+<td class="col-md-4">5.63</td>
+  
+
+<td class="col-md-5">3.13</td>
+  
+
+<td class="col-md-6">2.43</td>
+  
+
+<td class="col-md-7">1.22</td>
+  
+
+<td class="col-md-8">0.88</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
     <td class="col-md-2">AAPL</td>
     
 <td class="col-md-3">1.30</td>
   
 
-<td class="col-md-4">2.80</td>
+<td class="col-md-4">2.77</td>
   
 
 <td class="col-md-5">1.43</td>
   
 
-<td class="col-md-6">2.47</td>
+<td class="col-md-6">2.30</td>
   
 
-<td class="col-md-7">1.04</td>
+<td class="col-md-7">1.09</td>
   
 
-<td class="col-md-8">0.90</td>
+<td class="col-md-8">0.73</td>
   
 
 <td class="col-md-9">0.33</td>
