--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">1.76</td>
+  
+
+<td class="col-md-4">2.02</td>
+  
+
+<td class="col-md-5">1.16</td>
+  
+
+<td class="col-md-6">0.69</td>
+  
+
+<td class="col-md-7">1.21</td>
+  
+
+<td class="col-md-8">1.25</td>
+  
+
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
