--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
 <td class="col-md-3">0.97</td>
   
 
-<td class="col-md-4">12.29</td>
+<td class="col-md-4">11.91</td>
   
 
-<td class="col-md-5">1.44</td>
+<td class="col-md-5">1.46</td>
   
 
-<td class="col-md-6">1.26</td>
+<td class="col-md-6">1.28</td>
   
 
-<td class="col-md-7">0.69</td>
+<td class="col-md-7">0.72</td>
   
 
-<td class="col-md-8">3.00</td>
+<td class="col-md-8">3.25</td>
   
 
-<td class="col-md-9">0.33</td>
+<td class="col-md-9">0.67</td>
   
 s
 </tr>
@@ -74,27 +74,27 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
-    <td class="col-md-2">SNAP</td>
+    <td class="col-md-2">AMZN</td>
     
-<td class="col-md-3">1.52</td>
+<td class="col-md-3">1.75</td>
   
 
-<td class="col-md-4">2.60</td>
+<td class="col-md-4">2.05</td>
   
 
-<td class="col-md-5">1.67</td>
+<td class="col-md-5">1.16</td>
   
 
-<td class="col-md-6">1.50</td>
+<td class="col-md-6">0.69</td>
   
 
-<td class="col-md-7">1.54</td>
+<td class="col-md-7">1.33</td>
   
 
-<td class="col-md-8">0.00</td>
+<td class="col-md-8">0.58</td>
   
 
-<td class="col-md-9">2.00</td>
+<td class="col-md-9">0.67</td>
   
 s
 </tr>
@@ -103,27 +103,27 @@ s
 
 <tr>
     <td class="col-md-1">3</td>
-    <td class="col-md-2">NIO</td>
+    <td class="col-md-2">SNAP</td>
     
-<td class="col-md-3">7.75</td>
+<td class="col-md-3">1.52</td>
   
 
-<td class="col-md-4">1.74</td>
+<td class="col-md-4">2.62</td>
   
 
-<td class="col-md-5">1.07</td>
+<td class="col-md-5">1.76</td>
   
 
-<td class="col-md-6">1.56</td>
+<td class="col-md-6">1.64</td>
   
 
-<td class="col-md-7">2.11</td>
+<td class="col-md-7">1.77</td>
   
 
 <td class="col-md-8">0.00</td>
   
 
-<td class="col-md-9">0.25</td>
+<td class="col-md-9">2.00</td>
   
 s
 </tr>
