--- a/index.html
+++ b/index.html
@@ -47,25 +47,25 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">SQ</td>
     
-<td class="col-md-3">1.93</td>
+<td class="col-md-3">1.95</td>
   
 
-<td class="col-md-4">4.42</td>
+<td class="col-md-4">4.47</td>
   
 
-<td class="col-md-5">2.41</td>
+<td class="col-md-5">2.50</td>
   
 
-<td class="col-md-6">2.08</td>
+<td class="col-md-6">2.20</td>
   
 
-<td class="col-md-7">3.33</td>
+<td class="col-md-7">3.58</td>
   
 
-<td class="col-md-8">4.00</td>
+<td class="col-md-8">3.75</td>
   
 
-<td class="col-md-9">0.30</td>
+<td class="col-md-9">0.60</td>
   
 s
 </tr>
@@ -74,27 +74,27 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
-    <td class="col-md-2">AMZN</td>
+    <td class="col-md-2">QQQ</td>
     
-<td class="col-md-3">1.86</td>
+<td class="col-md-3">2.13</td>
   
 
-<td class="col-md-4">2.23</td>
+<td class="col-md-4">4.48</td>
   
 
-<td class="col-md-5">1.93</td>
+<td class="col-md-5">1.74</td>
   
 
-<td class="col-md-6">0.93</td>
+<td class="col-md-6">1.78</td>
   
 
-<td class="col-md-7">1.27</td>
+<td class="col-md-7">1.98</td>
   
 
-<td class="col-md-8">0.64</td>
+<td class="col-md-8">0.63</td>
   
 
-<td class="col-md-9">0.33</td>
+<td class="col-md-9">3.00</td>
   
 s
 </tr>
