--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">SQ</td>
     
-<td class="col-md-3">1.98</td>
+<td class="col-md-3">1.97</td>
   
 
-<td class="col-md-4">4.44</td>
+<td class="col-md-4">4.38</td>
   
 
-<td class="col-md-5">2.78</td>
+<td class="col-md-5">2.81</td>
   
 
-<td class="col-md-6">2.42</td>
+<td class="col-md-6">2.46</td>
   
 
-<td class="col-md-7">4.73</td>
+<td class="col-md-7">4.33</td>
   
 
-<td class="col-md-8">1.93</td>
+<td class="col-md-8">1.65</td>
   
 
 <td class="col-md-9">0.50</td>
@@ -91,7 +91,7 @@ s
 <td class="col-md-7">1.38</td>
   
 
-<td class="col-md-8">1.00</td>
+<td class="col-md-8">0.93</td>
   
 
 <td class="col-md-9">1.00</td>
@@ -114,16 +114,45 @@ s
 <td class="col-md-5">1.73</td>
   
 
-<td class="col-md-6">1.92</td>
+<td class="col-md-6">1.80</td>
   
 
-<td class="col-md-7">1.92</td>
+<td class="col-md-7">1.95</td>
   
 
-<td class="col-md-8">0.74</td>
+<td class="col-md-8">0.73</td>
   
 
-<td class="col-md-9">1.11</td>
+<td class="col-md-9">2.00</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">4</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">1.86</td>
+  
+
+<td class="col-md-4">2.16</td>
+  
+
+<td class="col-md-5">1.87</td>
+  
+
+<td class="col-md-6">0.90</td>
+  
+
+<td class="col-md-7">1.35</td>
+  
+
+<td class="col-md-8">0.58</td>
+  
+
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
