--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
 <td class="col-md-4">4.49</td>
   
 
-<td class="col-md-5">1.70</td>
+<td class="col-md-5">1.71</td>
   
 
-<td class="col-md-6">1.75</td>
+<td class="col-md-6">1.77</td>
   
 
 <td class="col-md-7">1.74</td>
   
 
-<td class="col-md-8">1.06</td>
+<td class="col-md-8">1.03</td>
   
 
-<td class="col-md-9">1.25</td>
+<td class="col-md-9">0.50</td>
   
 s
 </tr>
@@ -74,27 +74,27 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
-    <td class="col-md-2">FB</td>
+    <td class="col-md-2">SQ</td>
     
-<td class="col-md-3">0.77</td>
+<td class="col-md-3">2.00</td>
   
 
-<td class="col-md-4">2.03</td>
+<td class="col-md-4">4.25</td>
   
 
-<td class="col-md-5">1.88</td>
+<td class="col-md-5">3.17</td>
   
 
-<td class="col-md-6">0.68</td>
+<td class="col-md-6">2.65</td>
   
 
-<td class="col-md-7">1.78</td>
+<td class="col-md-7">4.38</td>
   
 
-<td class="col-md-8">0.86</td>
+<td class="col-md-8">0.89</td>
   
 
-<td class="col-md-9">0.33</td>
+<td class="col-md-9">1.33</td>
   
 s
 </tr>
@@ -103,27 +103,27 @@ s
 
 <tr>
     <td class="col-md-1">3</td>
-    <td class="col-md-2">SQ</td>
+    <td class="col-md-2">AAPL</td>
     
-<td class="col-md-3">1.99</td>
+<td class="col-md-3">1.20</td>
   
 
-<td class="col-md-4">4.22</td>
+<td class="col-md-4">2.26</td>
   
 
-<td class="col-md-5">3.00</td>
+<td class="col-md-5">1.46</td>
   
 
-<td class="col-md-6">2.58</td>
+<td class="col-md-6">1.80</td>
   
 
-<td class="col-md-7">4.15</td>
+<td class="col-md-7">1.24</td>
   
 
-<td class="col-md-8">0.75</td>
+<td class="col-md-8">0.86</td>
   
 
-<td class="col-md-9">0.25</td>
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
