--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
 <td class="col-md-3">2.12</td>
   
 
-<td class="col-md-4">4.29</td>
+<td class="col-md-4">4.30</td>
   
 
-<td class="col-md-5">3.77</td>
+<td class="col-md-5">3.81</td>
   
 
-<td class="col-md-6">3.18</td>
+<td class="col-md-6">3.21</td>
   
 
-<td class="col-md-7">5.85</td>
+<td class="col-md-7">5.92</td>
   
 
 <td class="col-md-8">1.11</td>
@@ -74,56 +74,27 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
-    <td class="col-md-2">AAPL</td>
+    <td class="col-md-2">QQQ</td>
     
-<td class="col-md-3">1.20</td>
+<td class="col-md-3">2.15</td>
   
 
-<td class="col-md-4">2.24</td>
+<td class="col-md-4">4.23</td>
   
 
-<td class="col-md-5">1.51</td>
+<td class="col-md-5">1.71</td>
   
 
-<td class="col-md-6">1.88</td>
+<td class="col-md-6">1.73</td>
   
 
-<td class="col-md-7">1.03</td>
+<td class="col-md-7">1.16</td>
   
 
-<td class="col-md-8">0.79</td>
+<td class="col-md-8">0.73</td>
   
 
-<td class="col-md-9">0.67</td>
-  
-s
-</tr>
-
-  
-
-<tr>
-    <td class="col-md-1">3</td>
-    <td class="col-md-2">AMZN</td>
-    
-<td class="col-md-3">1.84</td>
-  
-
-<td class="col-md-4">2.09</td>
-  
-
-<td class="col-md-5">1.56</td>
-  
-
-<td class="col-md-6">0.83</td>
-  
-
-<td class="col-md-7">1.19</td>
-  
-
-<td class="col-md-8">0.71</td>
-  
-
-<td class="col-md-9">0.33</td>
+<td class="col-md-9">2.00</td>
   
 s
 </tr>
