--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">SQ</td>
     
-<td class="col-md-3">2.12</td>
+<td class="col-md-3">2.13</td>
   
 
-<td class="col-md-4">4.30</td>
+<td class="col-md-4">4.25</td>
   
 
-<td class="col-md-5">3.81</td>
+<td class="col-md-5">3.84</td>
   
 
-<td class="col-md-6">3.21</td>
+<td class="col-md-6">3.25</td>
   
 
-<td class="col-md-7">5.92</td>
+<td class="col-md-7">6.00</td>
   
 
-<td class="col-md-8">1.11</td>
+<td class="col-md-8">1.07</td>
   
 
 <td class="col-md-9">1.40</td>
@@ -74,27 +74,27 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
-    <td class="col-md-2">QQQ</td>
+    <td class="col-md-2">AMZN</td>
     
-<td class="col-md-3">2.15</td>
+<td class="col-md-3">1.84</td>
   
 
-<td class="col-md-4">4.23</td>
+<td class="col-md-4">2.08</td>
   
 
-<td class="col-md-5">1.71</td>
+<td class="col-md-5">1.58</td>
   
 
-<td class="col-md-6">1.73</td>
+<td class="col-md-6">0.85</td>
   
 
-<td class="col-md-7">1.16</td>
+<td class="col-md-7">1.24</td>
   
 
-<td class="col-md-8">0.73</td>
+<td class="col-md-8">0.69</td>
   
 
-<td class="col-md-9">2.00</td>
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
