--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
 <td class="col-md-3">2.13</td>
   
 
-<td class="col-md-4">4.25</td>
+<td class="col-md-4">4.26</td>
   
 
-<td class="col-md-5">3.84</td>
+<td class="col-md-5">4.00</td>
   
 
-<td class="col-md-6">3.25</td>
+<td class="col-md-6">3.29</td>
   
 
-<td class="col-md-7">6.00</td>
+<td class="col-md-7">5.57</td>
   
 
 <td class="col-md-8">1.07</td>
   
 
-<td class="col-md-9">1.40</td>
+<td class="col-md-9">0.30</td>
   
 s
 </tr>
@@ -79,22 +79,51 @@ s
 <td class="col-md-3">1.84</td>
   
 
-<td class="col-md-4">2.08</td>
+<td class="col-md-4">2.09</td>
   
 
 <td class="col-md-5">1.58</td>
   
 
-<td class="col-md-6">0.85</td>
+<td class="col-md-6">0.87</td>
   
 
-<td class="col-md-7">1.24</td>
+<td class="col-md-7">1.21</td>
   
 
-<td class="col-md-8">0.69</td>
+<td class="col-md-8">0.86</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">1.33</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">QQQ</td>
+    
+<td class="col-md-3">2.15</td>
+  
+
+<td class="col-md-4">4.14</td>
+  
+
+<td class="col-md-5">1.73</td>
+  
+
+<td class="col-md-6">1.74</td>
+  
+
+<td class="col-md-7">1.07</td>
+  
+
+<td class="col-md-8">0.65</td>
+  
+
+<td class="col-md-9">0.80</td>
   
 s
 </tr>
