--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
 <td class="col-md-3">2.17</td>
   
 
-<td class="col-md-4">4.32</td>
+<td class="col-md-4">4.28</td>
   
 
-<td class="col-md-5">4.16</td>
+<td class="col-md-5">4.06</td>
   
 
-<td class="col-md-6">3.45</td>
+<td class="col-md-6">3.48</td>
   
 
-<td class="col-md-7">5.67</td>
+<td class="col-md-7">4.94</td>
   
 
-<td class="col-md-8">1.07</td>
+<td class="col-md-8">1.00</td>
   
 
-<td class="col-md-9">0.43</td>
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
@@ -74,6 +74,35 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">1.84</td>
+  
+
+<td class="col-md-4">2.05</td>
+  
+
+<td class="col-md-5">1.51</td>
+  
+
+<td class="col-md-6">0.94</td>
+  
+
+<td class="col-md-7">0.78</td>
+  
+
+<td class="col-md-8">0.80</td>
+  
+
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
     <td class="col-md-2">QQQ</td>
     
 <td class="col-md-3">2.16</td>
@@ -82,7 +111,7 @@ s
 <td class="col-md-4">3.99</td>
   
 
-<td class="col-md-5">1.72</td>
+<td class="col-md-5">1.73</td>
   
 
 <td class="col-md-6">1.65</td>
@@ -91,10 +120,10 @@ s
 <td class="col-md-7">0.79</td>
   
 
-<td class="col-md-8">0.81</td>
+<td class="col-md-8">0.64</td>
   
 
-<td class="col-md-9">0.50</td>
+<td class="col-md-9">0.67</td>
   
 s
 </tr>
