--- a/index.html
+++ b/index.html
@@ -47,25 +47,25 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">AMZN</td>
     
-<td class="col-md-3">1.83</td>
+<td class="col-md-3">1.84</td>
   
 
 <td class="col-md-4">2.03</td>
   
 
-<td class="col-md-5">1.53</td>
+<td class="col-md-5">1.55</td>
   
 
-<td class="col-md-6">1.02</td>
+<td class="col-md-6">1.00</td>
   
 
 <td class="col-md-7">0.80</td>
   
 
-<td class="col-md-8">1.23</td>
+<td class="col-md-8">1.50</td>
   
 
-<td class="col-md-9">2.00</td>
+<td class="col-md-9">2.33</td>
   
 s
 </tr>
@@ -79,22 +79,51 @@ s
 <td class="col-md-3">2.22</td>
   
 
-<td class="col-md-4">4.32</td>
+<td class="col-md-4">4.26</td>
   
 
-<td class="col-md-5">4.18</td>
+<td class="col-md-5">4.31</td>
   
 
 <td class="col-md-6">3.93</td>
   
 
-<td class="col-md-7">3.40</td>
+<td class="col-md-7">3.23</td>
   
 
-<td class="col-md-8">1.11</td>
+<td class="col-md-8">0.87</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">0.57</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">AAPL</td>
+    
+<td class="col-md-3">1.20</td>
+  
+
+<td class="col-md-4">2.17</td>
+  
+
+<td class="col-md-5">1.57</td>
+  
+
+<td class="col-md-6">1.69</td>
+  
+
+<td class="col-md-7">0.69</td>
+  
+
+<td class="col-md-8">0.45</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
