--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <td class="col-md-3">1.84</td>
   
 
-<td class="col-md-4">2.03</td>
+<td class="col-md-4">2.02</td>
   
 
 <td class="col-md-5">1.55</td>
@@ -59,13 +59,13 @@
 <td class="col-md-6">1.00</td>
   
 
-<td class="col-md-7">0.80</td>
+<td class="col-md-7">0.74</td>
   
 
-<td class="col-md-8">1.50</td>
+<td class="col-md-8">1.80</td>
   
 
-<td class="col-md-9">2.33</td>
+<td class="col-md-9">2.00</td>
   
 s
 </tr>
@@ -82,19 +82,19 @@ s
 <td class="col-md-4">4.26</td>
   
 
-<td class="col-md-5">4.31</td>
+<td class="col-md-5">4.15</td>
   
 
-<td class="col-md-6">3.93</td>
+<td class="col-md-6">4.07</td>
   
 
-<td class="col-md-7">3.23</td>
+<td class="col-md-7">3.07</td>
   
 
-<td class="col-md-8">0.87</td>
+<td class="col-md-8">0.77</td>
   
 
-<td class="col-md-9">0.57</td>
+<td class="col-md-9">0.29</td>
   
 s
 </tr>
@@ -103,6 +103,35 @@ s
 
 <tr>
     <td class="col-md-1">3</td>
+    <td class="col-md-2">QQQ</td>
+    
+<td class="col-md-3">2.16</td>
+  
+
+<td class="col-md-4">3.91</td>
+  
+
+<td class="col-md-5">1.77</td>
+  
+
+<td class="col-md-6">1.65</td>
+  
+
+<td class="col-md-7">0.65</td>
+  
+
+<td class="col-md-8">0.76</td>
+  
+
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">4</td>
     <td class="col-md-2">AAPL</td>
     
 <td class="col-md-3">1.20</td>
@@ -117,7 +146,7 @@ s
 <td class="col-md-6">1.69</td>
   
 
-<td class="col-md-7">0.69</td>
+<td class="col-md-7">0.65</td>
   
 
 <td class="col-md-8">0.45</td>
