--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <td class="col-md-3">1.85</td>
   
 
-<td class="col-md-4">2.02</td>
+<td class="col-md-4">2.01</td>
   
 
 <td class="col-md-5">1.61</td>
@@ -59,13 +59,13 @@
 <td class="col-md-6">0.99</td>
   
 
-<td class="col-md-7">0.82</td>
+<td class="col-md-7">0.86</td>
   
 
-<td class="col-md-8">1.75</td>
+<td class="col-md-8">1.62</td>
   
 
-<td class="col-md-9">1.67</td>
+<td class="col-md-9">0.50</td>
   
 s
 </tr>
@@ -74,6 +74,35 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
+    <td class="col-md-2">SQ</td>
+    
+<td class="col-md-3">2.26</td>
+  
+
+<td class="col-md-4">4.28</td>
+  
+
+<td class="col-md-5">4.66</td>
+  
+
+<td class="col-md-6">4.14</td>
+  
+
+<td class="col-md-7">1.67</td>
+  
+
+<td class="col-md-8">0.78</td>
+  
+
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
     <td class="col-md-2">QQQ</td>
     
 <td class="col-md-3">2.17</td>
@@ -85,13 +114,13 @@ s
 <td class="col-md-5">1.73</td>
   
 
-<td class="col-md-6">1.62</td>
+<td class="col-md-6">1.59</td>
   
 
-<td class="col-md-7">0.57</td>
+<td class="col-md-7">0.54</td>
   
 
-<td class="col-md-8">0.62</td>
+<td class="col-md-8">0.72</td>
   
 
 <td class="col-md-9">0.25</td>
