--- a/index.html
+++ b/index.html
@@ -47,25 +47,25 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">AMZN</td>
     
-<td class="col-md-3">1.84</td>
+<td class="col-md-3">1.85</td>
   
 
 <td class="col-md-4">2.03</td>
   
 
-<td class="col-md-5">1.59</td>
+<td class="col-md-5">1.61</td>
   
 
-<td class="col-md-6">1.06</td>
+<td class="col-md-6">1.05</td>
   
 
-<td class="col-md-7">0.85</td>
+<td class="col-md-7">0.88</td>
   
 
-<td class="col-md-8">1.92</td>
+<td class="col-md-8">1.60</td>
   
 
-<td class="col-md-9">2.33</td>
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
@@ -74,27 +74,27 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
-    <td class="col-md-2">NFLX</td>
+    <td class="col-md-2">SQ</td>
     
-<td class="col-md-3">1.64</td>
+<td class="col-md-3">2.32</td>
   
 
-<td class="col-md-4">4.53</td>
+<td class="col-md-4">4.43</td>
   
 
-<td class="col-md-5">1.44</td>
+<td class="col-md-5">5.23</td>
   
 
-<td class="col-md-6">1.17</td>
+<td class="col-md-6">4.59</td>
   
 
-<td class="col-md-7">0.67</td>
+<td class="col-md-7">1.61</td>
   
 
-<td class="col-md-8">1.25</td>
+<td class="col-md-8">0.83</td>
   
 
-<td class="col-md-9">0.33</td>
+<td class="col-md-9">2.00</td>
   
 s
 </tr>
