--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
 <td class="col-md-3">1.85</td>
   
 
-<td class="col-md-4">2.03</td>
+<td class="col-md-4">2.02</td>
   
 
 <td class="col-md-5">1.61</td>
   
 
-<td class="col-md-6">1.05</td>
+<td class="col-md-6">1.02</td>
   
 
 <td class="col-md-7">0.88</td>
   
 
-<td class="col-md-8">1.60</td>
+<td class="col-md-8">1.11</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">0.43</td>
   
 s
 </tr>
@@ -74,27 +74,56 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
+    <td class="col-md-2">QQQ</td>
+    
+<td class="col-md-3">2.17</td>
+  
+
+<td class="col-md-4">3.67</td>
+  
+
+<td class="col-md-5">1.69</td>
+  
+
+<td class="col-md-6">1.56</td>
+  
+
+<td class="col-md-7">0.48</td>
+  
+
+<td class="col-md-8">1.06</td>
+  
+
+<td class="col-md-9">1.50</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
     <td class="col-md-2">SQ</td>
     
-<td class="col-md-3">2.32</td>
+<td class="col-md-3">2.33</td>
   
 
-<td class="col-md-4">4.43</td>
+<td class="col-md-4">4.45</td>
   
 
-<td class="col-md-5">5.23</td>
+<td class="col-md-5">5.26</td>
   
 
-<td class="col-md-6">4.59</td>
+<td class="col-md-6">4.62</td>
   
 
-<td class="col-md-7">1.61</td>
+<td class="col-md-7">1.58</td>
   
 
-<td class="col-md-8">0.83</td>
+<td class="col-md-8">0.96</td>
   
 
-<td class="col-md-9">2.00</td>
+<td class="col-md-9">1.29</td>
   
 s
 </tr>
