--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
 <td class="col-md-5">1.45</td>
   
 
-<td class="col-md-6">1.19</td>
+<td class="col-md-6">1.12</td>
   
 
-<td class="col-md-7">1.04</td>
+<td class="col-md-7">1.06</td>
   
 
-<td class="col-md-8">1.19</td>
+<td class="col-md-8">1.20</td>
   
 
-<td class="col-md-9">2.33</td>
+<td class="col-md-9">0.50</td>
   
 s
 </tr>
@@ -74,6 +74,35 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
+    <td class="col-md-2">AAPL</td>
+    
+<td class="col-md-3">1.19</td>
+  
+
+<td class="col-md-4">2.14</td>
+  
+
+<td class="col-md-5">1.53</td>
+  
+
+<td class="col-md-6">1.05</td>
+  
+
+<td class="col-md-7">0.51</td>
+  
+
+<td class="col-md-8">1.17</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
     <td class="col-md-2">SQ</td>
     
 <td class="col-md-3">2.38</td>
@@ -82,16 +111,16 @@ s
 <td class="col-md-4">4.44</td>
   
 
-<td class="col-md-5">5.15</td>
+<td class="col-md-5">5.31</td>
   
 
 <td class="col-md-6">4.67</td>
   
 
-<td class="col-md-7">1.59</td>
+<td class="col-md-7">1.46</td>
   
 
-<td class="col-md-8">1.17</td>
+<td class="col-md-8">1.08</td>
   
 
 <td class="col-md-9">0.50</td>
