--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
 <td class="col-md-3">0.94</td>
   
 
-<td class="col-md-4">4.29</td>
+<td class="col-md-4">4.30</td>
   
 
-<td class="col-md-5">1.03</td>
+<td class="col-md-5">1.08</td>
   
 
-<td class="col-md-6">0.94</td>
+<td class="col-md-6">0.97</td>
   
 
-<td class="col-md-7">2.00</td>
+<td class="col-md-7">2.09</td>
   
 
-<td class="col-md-8">3.67</td>
+<td class="col-md-8">4.00</td>
   
 
 <td class="col-md-9">0.50</td>
@@ -79,22 +79,22 @@ s
 <td class="col-md-3">2.19</td>
   
 
-<td class="col-md-4">3.63</td>
+<td class="col-md-4">3.64</td>
   
 
-<td class="col-md-5">1.62</td>
+<td class="col-md-5">1.61</td>
   
 
-<td class="col-md-6">1.04</td>
+<td class="col-md-6">1.02</td>
   
 
-<td class="col-md-7">0.55</td>
+<td class="col-md-7">0.56</td>
   
 
-<td class="col-md-8">0.94</td>
+<td class="col-md-8">1.00</td>
   
 
-<td class="col-md-9">0.67</td>
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
@@ -105,16 +105,16 @@ s
     <td class="col-md-1">3</td>
     <td class="col-md-2">SQ</td>
     
-<td class="col-md-3">2.44</td>
+<td class="col-md-3">2.45</td>
   
 
-<td class="col-md-4">4.35</td>
+<td class="col-md-4">4.37</td>
   
 
-<td class="col-md-5">5.90</td>
+<td class="col-md-5">5.35</td>
   
 
-<td class="col-md-6">4.55</td>
+<td class="col-md-6">5.07</td>
   
 
 <td class="col-md-7">0.95</td>
@@ -123,7 +123,36 @@ s
 <td class="col-md-8">0.88</td>
   
 
-<td class="col-md-9">1.33</td>
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">4</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">1.85</td>
+  
+
+<td class="col-md-4">1.99</td>
+  
+
+<td class="col-md-5">1.26</td>
+  
+
+<td class="col-md-6">1.23</td>
+  
+
+<td class="col-md-7">1.13</td>
+  
+
+<td class="col-md-8">0.78</td>
+  
+
+<td class="col-md-9">0.40</td>
   
 s
 </tr>
