--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
 <td class="col-md-3">2.52</td>
   
 
-<td class="col-md-4">4.37</td>
+<td class="col-md-4">4.38</td>
   
 
-<td class="col-md-5">4.92</td>
+<td class="col-md-5">4.95</td>
   
 
-<td class="col-md-6">3.80</td>
+<td class="col-md-6">3.82</td>
   
 
-<td class="col-md-7">0.83</td>
+<td class="col-md-7">0.78</td>
   
 
-<td class="col-md-8">0.91</td>
+<td class="col-md-8">0.95</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">0.75</td>
   
 s
 </tr>
@@ -79,7 +79,7 @@ s
 <td class="col-md-3">2.21</td>
   
 
-<td class="col-md-4">3.44</td>
+<td class="col-md-4">3.42</td>
   
 
 <td class="col-md-5">1.62</td>
@@ -88,13 +88,42 @@ s
 <td class="col-md-6">0.71</td>
   
 
-<td class="col-md-7">0.72</td>
+<td class="col-md-7">0.71</td>
   
 
 <td class="col-md-8">0.76</td>
   
 
-<td class="col-md-9">0.67</td>
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">1.85</td>
+  
+
+<td class="col-md-4">1.95</td>
+  
+
+<td class="col-md-5">1.12</td>
+  
+
+<td class="col-md-6">0.95</td>
+  
+
+<td class="col-md-7">1.24</td>
+  
+
+<td class="col-md-8">0.47</td>
+  
+
+<td class="col-md-9">0.25</td>
   
 s
 </tr>
