--- a/index.html
+++ b/index.html
@@ -47,25 +47,25 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">AMZN</td>
     
-<td class="col-md-3">1.84</td>
+<td class="col-md-3">1.85</td>
   
 
-<td class="col-md-4">1.97</td>
+<td class="col-md-4">1.99</td>
   
 
-<td class="col-md-5">1.13</td>
+<td class="col-md-5">1.15</td>
   
 
-<td class="col-md-6">0.92</td>
+<td class="col-md-6">0.95</td>
   
 
-<td class="col-md-7">1.09</td>
+<td class="col-md-7">1.16</td>
   
 
-<td class="col-md-8">1.08</td>
+<td class="col-md-8">1.15</td>
   
 
-<td class="col-md-9">1.00</td>
+<td class="col-md-9">2.00</td>
   
 s
 </tr>
@@ -85,16 +85,45 @@ s
 <td class="col-md-5">4.67</td>
   
 
-<td class="col-md-6">3.00</td>
+<td class="col-md-6">2.92</td>
   
 
-<td class="col-md-7">0.84</td>
+<td class="col-md-7">0.82</td>
   
 
-<td class="col-md-8">1.00</td>
+<td class="col-md-8">0.86</td>
   
 
-<td class="col-md-9">0.17</td>
+<td class="col-md-9">0.20</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">W</td>
+    
+<td class="col-md-3">0.72</td>
+  
+
+<td class="col-md-4">1.34</td>
+  
+
+<td class="col-md-5">1.36</td>
+  
+
+<td class="col-md-6">0.76</td>
+  
+
+<td class="col-md-7">3.33</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
