--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">AMZN</td>
+    
+<td class="col-md-3">1.85</td>
+  
+
+<td class="col-md-4">1.99</td>
+  
+
+<td class="col-md-5">1.17</td>
+  
+
+<td class="col-md-6">0.98</td>
+  
+
+<td class="col-md-7">1.08</td>
+  
+
+<td class="col-md-8">1.70</td>
+  
+
+<td class="col-md-9">2.00</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
